added errorhandling and testing for 100% coverage