@@ -2,12 +2,17 @@ package com.prulloac.springdataextras.schema.versioning.strategy;
 
 import com.prulloac.springdataextras.errors.VersionStrategyNotFoundException;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 
 /** @author Prulloac */
 public class VersionStrategyFactory {
   private static final ConcurrentMap<String, VersionStrategy> INSTANCES = new ConcurrentHashMap<>();
+
+  private VersionStrategyFactory() {
+    throw new IllegalStateException("Utility class");
+  }
 
   public static VersionStrategy getInstance(String versionStrategyImplementation) {
     if (INSTANCES.containsKey(versionStrategyImplementation)) {
@@ -24,8 +29,11 @@ public class VersionStrategyFactory {
       if (c.equals(VersionStrategy.class)) {
         VersionStrategy strategy = null;
         try {
-          strategy = (VersionStrategy) candidate.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+          strategy = (VersionStrategy) candidate.getConstructor().newInstance();
+        } catch (InstantiationException
+            | IllegalAccessException
+            | NoSuchMethodException
+            | InvocationTargetException e) {
           throw new VersionStrategyNotFoundException(e);
         }
         INSTANCES.put(versionStrategyImplementation, strategy);
